Larger sidebar text

--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -16,7 +16,7 @@
       <a href="#" class="bg-dark-tan link blue b pv3 ph4 db dn-l f5">
         Manual topics
       </a>
-      <div class="bg-dark-tan dn db-l pv0 pv3-l ph3 ph4-l br2 max-vh-50 max-vh-none-l overflow-scroll">
+      <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll">
         <%= render 'doc/topics' %>
       </div>
     </div>
