--- a/app/views/shared/ref/_branching.html.erb
+++ b/app/views/shared/ref/_branching.html.erb
@@ -1,11 +1,11 @@
-<h3 class="f6 fw6">Branching and merging</h3>
+<h3 class="f5 fw6">Branching and merging</h3>
 <ul class="list pl0">
-  <li><%= man("git-branch", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-checkout", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-merge", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-mergetool", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-log", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-stash", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-tag", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-worktree", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-branch", :class => "link hover-u blue") %></li>
+  <li><%= man("git-checkout", :class => "link hover-u blue") %></li>
+  <li><%= man("git-merge", :class => "link hover-u blue") %></li>
+  <li><%= man("git-mergetool", :class => "link hover-u blue") %></li>
+  <li><%= man("git-log", :class => "link hover-u blue") %></li>
+  <li><%= man("git-stash", :class => "link hover-u blue") %></li>
+  <li><%= man("git-tag", :class => "link hover-u blue") %></li>
+  <li><%= man("git-worktree", :class => "link hover-u blue") %></li>
 </ul>
