--- a/app/views/shared/ref/_debugging.html.erb
+++ b/app/views/shared/ref/_debugging.html.erb
@@ -1,6 +1,6 @@
-<h3 class="f6 fw6">Debugging</h3>
+<h3 class="f5 fw6">Debugging</h3>
 <ul class="list pl0">
-  <li><%= man("git-bisect", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-blame", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-grep", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-bisect", :class => "link hover-u blue") %></li>
+  <li><%= man("git-blame", :class => "link hover-u blue") %></li>
+  <li><%= man("git-grep", :class => "link hover-u blue") %></li>
 </ul>
