--- a/app/views/shared/ref/_email.html.erb
+++ b/app/views/shared/ref/_email.html.erb
@@ -1,8 +1,8 @@
-<h3 class="f6 fw6">Email</h3>
+<h3 class="f5 fw6">Email</h3>
 <ul class="list pl0">
-  <li><%= man("git-am", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-apply", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-format-patch", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-send-email", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-request-pull", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-am", :class => "link hover-u blue") %></li>
+  <li><%= man("git-apply", :class => "link hover-u blue") %></li>
+  <li><%= man("git-format-patch", :class => "link hover-u blue") %></li>
+  <li><%= man("git-send-email", :class => "link hover-u blue") %></li>
+  <li><%= man("git-request-pull", :class => "link hover-u blue") %></li>
 </ul>
