--- a/app/views/shared/ref/_inspection.html.erb
+++ b/app/views/shared/ref/_inspection.html.erb
@@ -1,8 +1,8 @@
-<h3 class="f6 fw6">Inspection and comparison</h3>
+<h3 class="f5 fw6">Inspection and comparison</h3>
 <ul class="list pl0">
-  <li><%= man("git-show", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-log", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-diff", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-shortlog", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-describe", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-show", :class => "link hover-u blue") %></li>
+  <li><%= man("git-log", :class => "link hover-u blue") %></li>
+  <li><%= man("git-diff", :class => "link hover-u blue") %></li>
+  <li><%= man("git-shortlog", :class => "link hover-u blue") %></li>
+  <li><%= man("git-describe", :class => "link hover-u blue") %></li>
 </ul>
