--- a/app/views/shared/ref/_plumbing.html.erb
+++ b/app/views/shared/ref/_plumbing.html.erb
@@ -1,22 +1,22 @@
-<h3 class="f6 fw6">Plumbing commands</h3>
+<h3 class="f5 fw6">Plumbing commands</h3>
 <ul class="list pl0">
-  <li><%= man("git-cat-file", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-check-ignore", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-checkout-index", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-commit-tree", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-count-objects", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-diff-index", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-for-each-ref", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-hash-object", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-ls-files", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-merge-base", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-read-tree", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-rev-list", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-rev-parse", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-show-ref", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-symbolic-ref", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-update-index", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-update-ref", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-verify-pack", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-write-tree", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-cat-file", :class => "link hover-u blue") %></li>
+  <li><%= man("git-check-ignore", :class => "link hover-u blue") %></li>
+  <li><%= man("git-checkout-index", :class => "link hover-u blue") %></li>
+  <li><%= man("git-commit-tree", :class => "link hover-u blue") %></li>
+  <li><%= man("git-count-objects", :class => "link hover-u blue") %></li>
+  <li><%= man("git-diff-index", :class => "link hover-u blue") %></li>
+  <li><%= man("git-for-each-ref", :class => "link hover-u blue") %></li>
+  <li><%= man("git-hash-object", :class => "link hover-u blue") %></li>
+  <li><%= man("git-ls-files", :class => "link hover-u blue") %></li>
+  <li><%= man("git-merge-base", :class => "link hover-u blue") %></li>
+  <li><%= man("git-read-tree", :class => "link hover-u blue") %></li>
+  <li><%= man("git-rev-list", :class => "link hover-u blue") %></li>
+  <li><%= man("git-rev-parse", :class => "link hover-u blue") %></li>
+  <li><%= man("git-show-ref", :class => "link hover-u blue") %></li>
+  <li><%= man("git-symbolic-ref", :class => "link hover-u blue") %></li>
+  <li><%= man("git-update-index", :class => "link hover-u blue") %></li>
+  <li><%= man("git-update-ref", :class => "link hover-u blue") %></li>
+  <li><%= man("git-verify-pack", :class => "link hover-u blue") %></li>
+  <li><%= man("git-write-tree", :class => "link hover-u blue") %></li>
 </ul>
