--- a/app/views/shared/ref/_setup.html.erb
+++ b/app/views/shared/ref/_setup.html.erb
@@ -1,6 +1,6 @@
-<h3 class="f6 fw6">Setup and config</h3>
+<h3 class="f5 fw6">Setup and config</h3>
 <ul class="list pl0">
-  <li><%= man("git", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-config", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-help", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git", :class => "link hover-u blue") %></li>
+  <li><%= man("git-config", :class => "link hover-u blue") %></li>
+  <li><%= man("git-help", :class => "link hover-u blue") %></li>
 </ul>
