--- a/app/views/shared/ref/_sharing.html.erb
+++ b/app/views/shared/ref/_sharing.html.erb
@@ -1,8 +1,8 @@
-<h3 class="f6 fw6">Sharing and updating projects</h3>
+<h3 class="f5 fw6">Sharing and updating projects</h3>
 <ul class="list pl0">
-  <li><%= man("git-fetch", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-pull", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-push", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-remote", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-submodule", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-fetch", :class => "link hover-u blue") %></li>
+  <li><%= man("git-pull", :class => "link hover-u blue") %></li>
+  <li><%= man("git-push", :class => "link hover-u blue") %></li>
+  <li><%= man("git-remote", :class => "link hover-u blue") %></li>
+  <li><%= man("git-submodule", :class => "link hover-u blue") %></li>
 </ul>
