--- a/app/views/shared/ref/_creating.html.erb
+++ b/app/views/shared/ref/_creating.html.erb
@@ -1,5 +1,5 @@
-<h3 class="f6 fw6">Getting and creating projects</h3>
+<h3 class="f5 fw6">Getting and creating projects</h3>
 <ul class="list pl0">
-  <li><%= man("git-init", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-clone", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-init", :class => "link hover-u blue") %></li>
+  <li><%= man("git-clone", :class => "link hover-u blue") %></li>
 </ul>
