--- a/app/views/shared/ref/_external.html.erb
+++ b/app/views/shared/ref/_external.html.erb
@@ -1,5 +1,5 @@
-<h3 class="f6 fw6">External systems</h3>
+<h3 class="f5 fw6">External systems</h3>
 <ul class="list pl0">
-  <li><%= man("git-svn", :class => "link hover-u blue f6") %></li>
-  <li><%= man("git-fast-import", :class => "link hover-u blue f6") %></li>
+  <li><%= man("git-svn", :class => "link hover-u blue") %></li>
+  <li><%= man("git-fast-import", :class => "link hover-u blue") %></li>
 </ul>
