--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -12,11 +12,11 @@
     </div>
 
     <!-- Sidebar links -->
-    <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray">
-      <a href="#" class="bg-dark-tan link blue b pv3 ph4 db dn-l f5">
+    <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray details-container js-details-container">
+      <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target">
         Manual topics
-      </a>
-      <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll">
+      </button>
+      <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
         <%= render 'doc/topics' %>
       </div>
     </div>
