Higher z-index for version dropdown

--- a/app/views/doc/_versions.html.erb
+++ b/app/views/doc/_versions.html.erb
@@ -8,7 +8,7 @@
     <span class="dn di-l mid-gray"><%= @doc_file.name %> last updated in <%= @last.version.name %></span>
   </summary>
 
-  <div class="relative absolute-l bg-white pv3 br2 mt2 w-100 mw6-l shadow-0 shadow-1-l">
+  <div class="relative absolute-l bg-white pv3 br2 mt2 w-100 mw6-l shadow-0 shadow-1-l z-1">
     <div class="f6 ph3">Changes in the <span class="b"><%= @doc_file.name %></span> manual</div>
     <ol class="list pl0 max-vh-50 overflow-scroll relative">
       <% @doc_file.version_changes.each do |v| %>
