Add aria-labels to mobile header buttons

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
       <a href="/"><img src="/images/git-logo-full.svg" class="w-70 w-100-l" alt="Git"></a>
     </div>
     <nav class="site-nav f4 f5-l fw5 flex-auto-l nowrap order-0 order-1-l pr4-m pr5-l">
-      <button type="button" class="bg-transparent pa0 bw0 pointer button-reset near-black order-2 dn-l js-nav-link">
+      <button type="button" aria-label="Open navigation" class="bg-transparent pa0 bw0 pointer button-reset near-black order-2 dn-l js-nav-link">
         <!-- Menu icon -->
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>
       </button>
@@ -37,13 +37,13 @@
         </li>
       </ul>
     </nav>
-    <a href="#" class="near-black order-2 tr dn-l js-search-link">
+    <button type="button" aria-label="Open search form" class="bg-transparent pa0 bw0 pointer button-reset near-black order-2 dn-l js-search-link">
       <!-- Search icon -->
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="search-link-search js-icon-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
 
       <!-- X icon -->
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="dn search-link-x js-icon-search-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-    </a>
+    </button>
     <div class="search-box pv-0 order-3 dn db-l w-80 w-25-l absolute relative-l">
       <form action="#">
         <input type="search" class="input-reset outline-0 pv1 ph2 br2 ba focus-bg-white b--moon-gray hover-b-orange hover-shadow-orange w-100 js-search-input" placeholder="Search…">
