--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -1,88 +1,24 @@
 <% @section = "manual" %>
 <% @page_title = "Manual · Git" %>
 
-<% content_for :sidebar do %>
-<% end %>
+<div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
+  <div class="order-1 order-0-l w-100 w-75-l pl0-l pr5-l lh-copy">
+    <h2 class="f3">Manual</h2>
 
-<div id="main">
+    <p>These are the official and comprehensive man pages that are included in the Git package itself.</p>
 
-  <h1> Documentation </h1>
-
-  <h2> Reference </h2>
-
-  <div class="callout ref-manual">
-    <h3><%= link_to "Reference Manual", manual_path %></h3>
-
-    <p>
-      The official and comprehensive <strong>man pages</strong> that are included in the Git package itself.
-    </p>
-  </div>
-
-  <p class="quickref">
-    Quick reference guides:
-
-    <%= link_to "GitHub Cheat Sheet", "https://services.github.com/on-demand/downloads/github-git-cheat-sheet.pdf" %>
-    <small class="light">(PDF) &nbsp;|&nbsp;</small>
-    <%= link_to "Visual Git Cheat Sheet", "http://ndpsoftware.com/git-cheatsheet.html" %>
-    <small class="light"> (SVG | PNG)
-
-  </p>
-
-  <h2> Book </h2>
-
-  <div class="callout ref-manual">
-    <h3>Pro Git</h3>
-    <p>The entire <strong><a href="/book">Pro Git book</a></strong> written
-      by Scott Chacon and Ben Straub is available to <a href="/book">read online for free</a>.
-      Dead tree versions are available on <a href="http://www.amazon.com/Pro-Git-Scott-Chacon/dp/1484200772?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
-    </p>
-  </div>
-    <h2> Videos </h2>
-
-    <% groups = @videos[0,4].group_by { |i| i[0] % 2 } %>
-
-    <div class="two-column">
-      <div class="column-left">
-        <ul class="video-thumbnails">
-          <% groups[1].each do |video| %>
-            <li>
-              <%= link_to image_tag("video/ep#{video[0]}.png"), "/video/#{ video[4] }" %>
-              <h4>
-                <%= link_to video[3], "/video/#{ video[4] }" %>
-              </h4>
-              <p class="description">
-                <strong>Length:</strong> <%= video[5] %>
-              </p>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div class="column-right">
-        <ul class="video-thumbnails">
-          <% groups[0].each do |video| %>
-            <li>
-              <%= link_to image_tag("video/ep#{video[0]}.png"), "/video/#{ video[4] }" %>
-              <h4>
-                <%= link_to video[3], "/video/#{ video[4] }" %>
-              </h4>
-              <p class="description">
-                <strong>Length:</strong> <%= video[5] %>
-              </p>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+    <div class="mt5 pa5 mid-gray ba br2 b--moon-gray">
+      TODO: can we keep this section short and offer a brief list of useful sections to jump into for new users and/or the most visited pages?
     </div>
-
-    <p>
-      <%= link_to "See all videos →", "/videos" %>
-    </p>
-
-    <h2> External Links </h2>
-    <p>
-      The <%= link_to "External Links section", "/doc/ext" %> is a curated, ever-evolving collection of tutorials, books, videos, and other Git resources.
-    </p>
-
   </div>
 
+  <!-- Sidebar links -->
+  <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray details-container js-details-container">
+    <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target">
+      Manual topics
+    </button>
+    <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
+      <%= render 'doc/topics' %>
+    </div>
+  </div>
 </div>
