First pass at grid for manual index

--- a/app/views/doc/index.html.erb
+++ b/app/views/doc/index.html.erb
@@ -2,23 +2,369 @@
 <% @page_title = "Manual · Git" %>
 
 <div class="flex flex-column flex-row-l ph0 ph3 ph4-m ph5-l">
-  <div class="order-1 order-0-l w-100 w-75-l pl0-l pr5-l lh-copy">
+  <div class="order-1 order-0-l w-100 w-75-l_ pl0-l lh-copy">
     <h2 class="f3">Manual</h2>
 
     <p>These are the official and comprehensive man pages that are included in the Git package itself.</p>
 
-    <div class="mt5 pa5 mid-gray ba br2 b--moon-gray">
-      TODO: can we keep this section short and offer a brief list of useful sections to jump into for new users and/or the most visited pages?
+    <div class="mt4 manual-grid">
+      <div class="pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Setup and config</h3>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">git</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">config</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">help</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+      </div>
+
+      <div class="pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Getting and creating projects</h3>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">init</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">clone</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+      </div>
+
+      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Basic snapshotting</h3>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">add</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">status</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">diff</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">commit</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">reset</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">rm</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">reset</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Branching and merging</h3>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">branch</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">checkout</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">merge</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">mergetool</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">log</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">stash</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">tag</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">worktree</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Sharing and updating projects</h3>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">fetch</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">pull</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">push</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">remote</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">submodule</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Inspection and comparison</h3>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">show</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">log</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">diff</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">rebase</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">describe</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Patching</h3>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">apply</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">cherry-pick</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">diff</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">rebase</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">revert</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Debugging</h3>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">bisect</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">blame</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">grep</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+      </div>
+
+      <div class="gc2 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Email</h3>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">am</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">apply</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">format-patch</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-50-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">send-email</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">request-pull</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">External systems</h3>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">svn</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">fast-import</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+      </div>
+
+      <div class="pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Server admin</h3>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">daemon</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        <h4 class="f5 mb0"><a href="/manuals/git-init">update-server-info</a></h4>
+        <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+      </div>
+
+      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Guides</h3>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">gitattributes</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">Everyday Git</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">Glossary</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">gitignore</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">gitmodules</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">Revisions</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">Tutorial</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">Workflows</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Administration</h3>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">clean</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">gc</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">fsck</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">reflog</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">filter-branch</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">instaweb</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">archive</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">bundle</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
+
+      <div class="gc3 pa3 shadow-1 br2 bg-near-white">
+        <h3 class="mv0 f4 fw5 orange">Plumbing commands</h3>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">cat-file</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">check-ignore</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">checkout-index</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">commit-tree</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">count-objects</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">diff-index</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">for-each-ref</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+        </div>
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">hash-object</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">ls-files</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">merge-base</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">read-tree</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">rev-list</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">rev-parse</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+
+        <div class="fl w-100 w-third-ns pa2">
+          <h4 class="f5 mb0"><a href="/manuals/git-init">show-ref</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">symbolic-ref</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">update-index</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">update-ref</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">verify-pack</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+
+          <h4 class="f5 mb0"><a href="/manuals/git-init">write-tree</a></h4>
+          <p class="mv1 f6 mid-gray">Create an empty Git repository or reinitialize an existing one</p>
+        </div>
+      </div>
     </div>
   </div>
 
   <!-- Sidebar links -->
-  <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray details-container js-details-container">
-    <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target">
-      Manual topics
-    </button>
-    <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content">
-      <%= render 'doc/topics' %>
-    </div>
-  </div>
+  <%# <div class="nl4 nr4 ml0-l mr0-l order-0 order-1-l w-25-l mb3 mb0-l bb bb-0-l b--moon-gray details-container js-details-container"> %>
+  <%#   <button type="button" class="button-reset pointer bg-dark-tan link blue b pv3 ph4 bw0 w-100 tl db dn-l f5 js-details-target"> %>
+  <%#     Manual topics %>
+  <%#   </button> %>
+  <%#   <div class="bg-dark-tan dn db-l pv0 pv3-l ph4 br2 lh-copy max-vh-50 max-vh-none-l overflow-scroll details-content"> %>
+  <%#     <%= render 'doc/topics' %1> %>
+  <%#   </div> %>
+  <%# </div> %>
 </div>
