--- a/app/assets/stylesheets/src/tachyons-custom.css
+++ b/app/assets/stylesheets/src/tachyons-custom.css
@@ -84,7 +84,27 @@ code, .code { font-family: "SFMono-Regular", Consolas, Menlo, Andale, monospace;
 /*
  * Box shadows
  */
-.shadow-1-l { box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07); }
+.shadow-1 {
+  box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
+}
+
+@media screen and (min-width: 30em) {
+  .shadow-1-ns {
+    box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
+  }
+}
+
+@media screen and (min-width: 30em) and (max-width: 60em) {
+  .shadow-1-m {
+    box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
+  }
+}
+
+@media screen and (min-width: 60em) {
+  .shadow-1-l {
+    box-shadow: 0 12px 20px rgba(0,0,0,.1), 0 5px 10px rgba(0,0,0,.07);
+  }
+}
 
 /*
  * Negative margins
